--- a/static/style.css
+++ b/static/style.css
@@ -4,8 +4,9 @@
 }
 
 body {
-    width: 800px;
+    max-width: 800px;
     margin: 0 auto;
+    padding: 10px;
     font-family: "Fira Sans", "Verdana", "Geneva", sans-serif;
     font-weight: 300;
     line-height: 1.4;
@@ -32,21 +33,21 @@ h1 {
     margin-top: 1rem;
     margin-bottom: 1rem;
     font-weight: 500;
-    font-size: 3.00rem;
+    font-size: 2.5rem;
 }
 
 h2 {
     margin-top: 1rem;
     margin-bottom: 1rem;
     font-weight: 300;
-    font-size: 2.5rem;
+    font-size: 2.0rem;
 }
 
 h3 {
     margin-top: 1rem;
     margin-bottom: 0.5rem;
     font-weight: 400;
-    font-size: 2rem;
+    font-size: 1.75rem;
 }
 
 h4 {
@@ -81,7 +82,6 @@ a {
     background-position-x: 0;
     color: #449;
     text-decoration: none;
-    /* text-shadow: white 0.7px 0.7px 0.1px, white 0 1px 0.1px, white -.7px 0.7px 0.1px, white -.7px 0 0.1px, white -.7px -.7px 0.1px, white 0 -.7px 0.1px, white 0.7px -.7px 0.1px, white 0.7px 0 0.1px; */
     transition: 0.15s;
 }
 
@@ -89,7 +89,6 @@ a:active {
     background-color: #eee;
     color: #555;
     text-decoration: none;
-    /* text-shadow: #eee 0.7px 0.7px 0.1px, #eee 0 1px 0.1px, #eee -.7px 0.7px 0.1px, #eee -.7px 0 0.1px, #eee -.7px -.7px 0.1px, #eee 0 -.7px 0.1px, #eee 0.7px -.7px 0.1px, #eee 0.7px 0 0.1px; */
 }
 
 a:hover {
